[metadata]
name = python-ethapi
summary = A library for api.ethermine.org
description-file =
    README.rst
author = Nicholas Totsch
author-email = nicholas.totsch@gmail.com
home-page = https://git.cajun.pro/dirtycajunrice/python-ethapi
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Programming Language :: Python :: 3.5
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    ethapi

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True